--- a/pages/17262.html
+++ b/pages/17262.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9081/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9081/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -525,11 +525,18 @@ margin-left: 0em;
 </li>
 
 <li id="HamiltonianGroup">
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> is a <strong>Hamiltonian group</strong> i.e. a <a class="existingWikiWord" href="/nlab/show/non-abelian+group">non-abelian group</a> such that every <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> is <a class="existingWikiWord" href="/nlab/show/normal+subgroup">normal</a>. Moreover, a result by Baer (1933) says that every Hamiltonian group contains <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> as a <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a>! (cf. <a href="#Scott87">Scott (1987, p.253</a>)</p>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> is a <strong>Hamiltonian group</strong> i.e. a <a class="existingWikiWord" href="/nlab/show/non-abelian+group">non-abelian group</a> such that every <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> is <a class="existingWikiWord" href="/nlab/show/normal+subgroup">normal</a>. Moreover, a general structure theorem for Hamiltonian groups by Baer (1933) says that every Hamiltonian group has a <a class="existingWikiWord" href="/nlab/show/direct+product+group">direct product group</a>-decomposition containing <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> as a factor hence, in particular, every Hamiltonian group contains <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> as a <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a>! (cf. <a href="#Scott87">Scott (1987, p.253</a>))</p>
 </li>
 
-<li id="InclusionInLargerFininteSubgroupsOfSU2">
-<p>among the <a class="existingWikiWord" href="/nlab/show/finite+subgroups+of+SU%282%29">finite subgroups of SU(2)</a> (hence among all “finite quaternion groups”) <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> is a proper <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> precisely of the three exceptional cases:</p>
+<li>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> is the multiplicative part of the quaternionic near-field <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>J</mi> <mn>9</mn></msub></mrow><annotation encoding="application/x-tex">J_9</annotation></semantics></math>. (cf. <a href="#Weibel07">Weibel (2007)</a>)</p>
+</li>
+</ul>
+
+<div class="num_prop" id="InclusionInLargerFininteSubgroupsOfSU2">
+<h6 id="proposition">Proposition</h6>
+
+<p>Among the <a class="existingWikiWord" href="/nlab/show/finite+subgroups+of+SU%282%29">finite subgroups of SU(2)</a> (hence among all “finite quaternion groups”) the quaternion group of <a class="existingWikiWord" href="/nlab/show/order+of+a+group">order</a> 8, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> is a proper <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> precisely of the three <a class="existingWikiWord" href="/nlab/show/ADE-classification">exceptional cases</a>:</p>
 
 <ul>
 <li>
@@ -544,14 +551,9 @@ margin-left: 0em;
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub><mo>⊂</mo><mn>2</mn><mi>O</mi></mrow><annotation encoding="application/x-tex">Q_8 \subset 2 O</annotation></semantics></math> the <a class="existingWikiWord" href="/nlab/show/binary+octahedral+group">binary octahedral group</a> (<a class="existingWikiWord" href="/nlab/show/normal+subgroup">normal</a>)</p>
 </li>
 </ul>
+</div>
 
 <p>(e.g. <a href="#KocaMocKoca16">Koca-Moc-Koca 16, p. 8</a>, pointing to <a href="#CoxeterMoser65">Coxeter-Moser 65</a> and <a href="#Coxeter73">Coxeter 73</a>)</p>
-</li>
-
-<li>
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> is the multiplicative part of the quaternionic near-field <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>J</mi> <mn>9</mn></msub></mrow><annotation encoding="application/x-tex">J_9</annotation></semantics></math>. (cf. <a href="#Weibel07">Weibel (2007)</a>)</p>
-</li>
-</ul>
 
 <h2 id="related_entries">Related entries</h2>
 
@@ -616,14 +618,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 05:28:40.
+  Last revised on October  2, 2018 at 06:58:29.
   See the <a href="https://ncatlab.org/nlab/history/quaternion group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quaternion+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quaternion+group/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/quaternion+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quaternion+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quaternion+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quaternion+group/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/quaternion+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quaternion+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quaternion group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
