--- a/pages/1593.html
+++ b/pages/1593.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -806,6 +806,28 @@ margin-left: 0em;
 <li id="Witten98"><a class="existingWikiWord" href="/nlab/show/Edward+Witten">Edward Witten</a>, section 5 of <em>D-branes and K-theory</em>, J. High Energy Phys., 1998(12):019, 1998 (<a href="http://arxiv.org/abs/hep-th/9810188">arXiv:hep-th/9810188</a>)</li>
 </ul>
 
+<p>and was re-amplified in</p>
+
+<ul>
+<li id="Gukov00"><a class="existingWikiWord" href="/nlab/show/Sergei+Gukov">Sergei Gukov</a>, <em>K-Theory, Reality, and Orientifolds</em>, Commun.Math.Phys. 210 (2000) 621-639 (<a href="http://arxiv.org/abs/hep-th/9901042">arXiv:hep-th/9901042</a>)</li>
+</ul>
+
+<p>Discussion of orbi-orienti-folds in terms of <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant</a> <a class="existingWikiWord" href="/nlab/show/KO-theory">KO-theory</a> is in</p>
+
+<ul>
+<li>
+<p>N. Quiroz, <a class="existingWikiWord" href="/nlab/show/Bogdan+Stefanski">Bogdan Stefanski</a>, <em>Dirichlet Branes on Orientifolds</em>, Phys.Rev. D66 (2002) 026002 (<a href="https://arxiv.org/abs/hep-th/0110041">arXiv:hep-th/0110041</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Volker+Braun">Volker Braun</a>, <a class="existingWikiWord" href="/nlab/show/Bogdan+Stefanski">Bogdan Stefanski</a>, <em>Orientifolds and K-theory</em> (<a href="https://arxiv.org/abs/hep-th/0206158">arXiv:hep-th/0206158</a>)</p>
+</li>
+
+<li>
+<p>H. Garcia-Compean, W. Herrera-Suarez, B. A. Itza-Ortiz, O. Loaiza-Brito, <em>D-Branes in Orientifolds and Orbifolds and Kasparov KK-Theory</em>, JHEP 0812:007, 2008 (<a href="https://arxiv.org/abs/0809.4238">arXiv:0809.4238</a>)</p>
+</li>
+</ul>
+
 <p>A definition and study of orientifold <a class="existingWikiWord" href="/nlab/show/bundle+gerbes">bundle gerbes</a>, modeling the <a class="existingWikiWord" href="/nlab/show/B-field">B-field</a> <a class="existingWikiWord" href="/nlab/show/background+gauge+field">background</a> for the <a class="existingWikiWord" href="/nlab/show/bosonic+string">bosonic string</a> (differential <a class="existingWikiWord" href="/nlab/show/HZR-theory">HZR-theory</a>), is in</p>
 
 <ul>
@@ -840,11 +862,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Jacques+Distler">Jacques Distler</a>, <em>Orientifolds and Twisted KR-Theory</em> (2008) (<a href="http://www.perimeterinstitute.ca/pdf/files/731c5f3a-928f-453a-b569-db5c574d2a6c.pdf">pdf</a>)</p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Daniel+Freed">Daniel Freed</a>, <em>Dirac charge quantiation, K-theory, and orientifolds</em>, talk at a workshop <em>Mathematical methods in general relativity and quantum field theories</em>, November, 2009 (<a href="http://www.ma.utexas.edu/users/dafr/paris_nt.pdf">pdf</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Daniel+Freed">Daniel Freed</a>, <em>Dirac charge quantiation, K-theory, and orientifolds</em>, talk at a workshop <em>Mathematical methods in general relativity and quantum field theories</em>, Paris, November 2009 (<a href="http://www.ma.utexas.edu/users/dafr/paris_nt.pdf">pdf</a>, <a class="existingWikiWord" href="/nlab/files/FreedK09.pdf" title="pdf">pdf</a>)</p>
 </li>
 
 <li>
@@ -859,10 +877,6 @@ margin-left: 0em;
 <p>A detailed list of examples of <a class="existingWikiWord" href="/nlab/show/KR-theory">KR-theory</a> of orientifolds and their <a class="existingWikiWord" href="/nlab/show/T-duality">T-duality</a> is in</p>
 
 <ul>
-<li id="Gukov00">
-<p><a class="existingWikiWord" href="/nlab/show/Sergei+Gukov">Sergei Gukov</a>, <em>K-Theory, Reality, and Orientifolds</em>, Commun.Math.Phys. 210 (2000) 621-639 (<a href="http://arxiv.org/abs/hep-th/9901042">arXiv:hep-th/9901042</a>)</p>
-</li>
-
 <li id="DMR13">
 <p>Charles Doran, Stefan Mendez-Diez, <a class="existingWikiWord" href="/nlab/show/Jonathan+Rosenberg">Jonathan Rosenberg</a>, <em>T-duality For Orientifolds and Twisted KR-theory</em> (<a href="http://arxiv.org/abs/1306.1779">arXiv:1306.1779</a>)</p>
 </li>
@@ -913,14 +927,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 10:36:22.
+  Last revised on October  2, 2018 at 07:40:39.
   See the <a href="https://ncatlab.org/nlab/history/orientifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orientifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold/39" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(39 revisions)</span> | <a href="/nlab/show/diff/orientifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orientifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orientifold/40" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(40 revisions)</span> | <a href="/nlab/show/diff/orientifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orientifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orientifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
