--- a/pages/16781.html
+++ b/pages/16781.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -483,6 +483,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#isomorphisms'>Isomorphisms</a></li>
 <li><a href='#group_order'>Group order</a></li>
+<li><a href='#subgroups'>Subgroups</a></li>
 <li><a href='#group_cohomology'>Group cohomology</a></li>
 </ul>
 <li><a href='#references'>References</a></li>
@@ -558,6 +559,24 @@ margin-left: 0em;
 
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">|</mo><mn>2</mn><mi>O</mi><mo stretchy="false">|</mo><mo>=</mo><mn>48</mn></mrow><annotation encoding="application/x-tex">\vert 2O \vert = 48</annotation></semantics></math></p>
 
+<h3 id="subgroups">Subgroups</h3>
+
+<div class="num_prop" id="QuaternionSubgroup">
+<h6 id="proposition">Proposition</h6>
+
+<p><strong>(<a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a> inside <a class="existingWikiWord" href="/nlab/show/binary+tetrahedral+group">binary tetrahedral group</a>)</strong></p>
+
+<p>The <a class="existingWikiWord" href="/nlab/show/binary+octahedral+group">binary octahedral group</a> contains the <a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a> of <a class="existingWikiWord" href="/nlab/show/order">order</a> 8, hence the <a class="existingWikiWord" href="/nlab/show/binary+dihedral+group">binary dihedral group</a> of <a class="existingWikiWord" href="/nlab/show/order+of+a+group">order</a> 8, as a <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> (not <a class="existingWikiWord" href="/nlab/show/normal+subgroup">normal</a>):</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mn>2</mn><msub><mi>D</mi> <mn>4</mn></msub><mo>=</mo><msub><mi>Q</mi> <mn>8</mn></msub><mo>⊂</mo><mn>2</mn><mi>O</mi><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  2 D_4 = Q_8 \subset 2 O
+  \,.
+
+</annotation></semantics></math></div>
+<p>In fact the only <a class="existingWikiWord" href="/nlab/show/finite+subgroups+of+SU%282%29">finite subgroups of SU(2)</a> which contain <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><msub><mi>D</mi> <mn>4</mn></msub><mo>=</mo><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">2 D_4 =Q_8</annotation></semantics></math> as a proper subgroup are the exceptional ones, hence the <a class="existingWikiWord" href="/nlab/show/binary+tetrahedral+group">binary tetrahedral group</a>, the <a class="existingWikiWord" href="/nlab/show/binary+octahedral+group">binary octahedral group</a> and the <a class="existingWikiWord" href="/nlab/show/binary+icosahedral+group">binary icosahedral group</a>.</p>
+</div>
+
+<p>See <a href="quaternion+group#InclusionInLargerFininteSubgroupsOfSU2">this Prop</a> at <em><a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a></em>.</p>
+
 <h3 id="group_cohomology">Group cohomology</h3>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/group+cohomology">group cohomology</a> of the orientation-preserving octahedral group is discussed in <a href="#Groupprops">Groupprops</a>, <a href="#Kirdar13">Kirdar 13</a>.</p>
@@ -603,14 +622,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 04:27:02.
+  Last revised on October  2, 2018 at 07:04:30.
   See the <a href="https://ncatlab.org/nlab/history/octahedral group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/octahedral+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/octahedral+group/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/octahedral+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/octahedral+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/octahedral+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/octahedral+group/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/octahedral+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/octahedral+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/octahedral group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
