--- a/pages/7828.html
+++ b/pages/7828.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1041,6 +1041,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Gennady+Kasparov">Gennady Kasparov</a>, <em>The operator K-functor and extensions of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>C</mi> <mo>*</mo></msup></mrow><annotation encoding="application/x-tex">C^\ast</annotation></semantics></math>-algebras,</em> Izv. Akad. Nauk. SSSR Ser. Mat. 44, 571-636 (1980).</li>
 </ul>
 
+<p>Computations over <a class="existingWikiWord" href="/nlab/show/compact+Lie+groups">compact Lie groups</a> are spelled out in</p>
+
+<ul>
+<li>Chi-Kwong Fok, <em>The real K-Theory of compact Lie groups</em>, 2014 (<a href="http://pi.math.cornell.edu/~ckfok/Chi_Kwong_Fok_thesis.pdf">pdf</a>)</li>
+</ul>
+
 <p>Discussion in the general context of <a class="existingWikiWord" href="/nlab/show/real+oriented+cohomology+theory">real oriented cohomology theory</a> is in</p>
 
 <ul>
@@ -1152,14 +1158,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 07:14:21.
+  Last revised on October  2, 2018 at 08:52:17.
   See the <a href="https://ncatlab.org/nlab/history/KR cohomology theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/KR+cohomology+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/KR+cohomology+theory/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/KR+cohomology+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/KR+cohomology+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/KR+cohomology+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/KR+cohomology+theory/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/KR+cohomology+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/KR+cohomology+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/KR cohomology theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
