--- a/pages/10066.html
+++ b/pages/10066.html
@@ -713,7 +713,7 @@ margin-left: 0em;
 </annotation></semantics></math></div>
 <p>The first <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphism</a> here follows immediately from the elementary definition of equivariant <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a>, since a <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/equivariant+vector+bundle">equivariant vector bundle</a> over the point is manifestly just a <a class="existingWikiWord" href="/nlab/show/linear+representation">linear representation</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math> on a <a class="existingWikiWord" href="/nlab/show/complex+vector+space">complex vector space</a>.</p>
 
-<p>(e.g. <a href="#Wilson16">Wilson 16, example 1.6 p. 3</a>)</p>
+<p>(e.g. <a href="#Greenlees05">Greenlees 05, section 3</a>, <a href="#Wilson16">Wilson 16, example 1.6 p. 3</a>)</p>
 
 <p>Therefore a similar isomorphism identifies the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-representation ring over the <a class="existingWikiWord" href="/nlab/show/real+numbers">real numbers</a> with the equivariant orthogonal <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>-theory of the point in degree 0:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>R</mi> <mi>ℝ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><msubsup><mi>KO</mi> <mi>G</mi> <mn>0</mn></msubsup><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
@@ -826,7 +826,7 @@ margin-left: 0em;
 <p>Introductions and surveys include</p>
 
 <ul>
-<li>
+<li id="Greenlees05">
 <p><a class="existingWikiWord" href="/nlab/show/John+Greenlees">John Greenlees</a>, <em>Equivariant version of real and complex connective K-theory</em>, Homology Homotopy Appl. Volume 7, Number 3 (2005), 63-82. (<a href="http://projecteuclid.org/euclid.hha/1139839291">Euclid:1139839291</a>)</p>
 </li>
 
@@ -890,14 +890,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 06:18:08.
+  Last revised on October  2, 2018 at 09:14:04.
   See the <a href="https://ncatlab.org/nlab/history/equivariant K-theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+K-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+K-theory/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/equivariant+K-theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+K-theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+K-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+K-theory/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/equivariant+K-theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+K-theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant K-theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
