--- a/pages/16772.html
+++ b/pages/16772.html
@@ -485,6 +485,9 @@ margin-left: 0em;
 <li><a href='#as_part_of_the_ade_pattern'>As part of the ADE pattern</a></li>
 </ul>
 <li><a href='#examples'>Examples</a></li>
+<ul>
+<li><a href='#quaternion_group__and_triality'>Quaternion group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> and triality</a></li>
+</ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
@@ -494,7 +497,7 @@ margin-left: 0em;
 
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">n \in \mathbb{N}</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>≥</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">n \geq 1</annotation></semantics></math>, the dihedral group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>D</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">D_{2n}</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> of the <a class="existingWikiWord" href="/nlab/show/orthogonal+group">orthogonal group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>O</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">O(2)</annotation></semantics></math> which is generated from the finite <a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic</a> <a class="existingWikiWord" href="/nlab/show/subgroup">subgroup</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>C</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">C_n</annotation></semantics></math> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SO</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SO(2)</annotation></semantics></math> and the <a class="existingWikiWord" href="/nlab/show/reflection">reflection</a> at the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math>-axis (say).</p>
 
-<p>Under the further embedding <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>O</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo><mo>↪</mo><mi>SO</mi><mo stretchy="false">(</mo><mn>3</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">O(2)\hookrightarrow SO(3)</annotation></semantics></math> the (cyclic and) dihedral groups are precisely those <a class="existingWikiWord" href="/nlab/show/finite+groups">finite groups</a> in the <a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE classification</a> which are not in the exceptional series.</p>
+<p>Under the further embedding <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>O</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo><mo>↪</mo><mi>SO</mi><mo stretchy="false">(</mo><mn>3</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">O(2)\hookrightarrow SO(3)</annotation></semantics></math> the (cyclic and) dihedral groups are precisely those <a class="existingWikiWord" href="/nlab/show/finite+subgroups+of+SO%283%29">finite subgroups of SO(3)</a> that, among their <a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE classification</a>, are not in the exceptional series.</p>
 
 <p>(see e.g. <a href="#Greenless01">Greenless 01, section 2</a>)</p>
 
@@ -513,9 +516,17 @@ margin-left: 0em;
 </tbody></table>
 <h2 id="examples">Examples</h2>
 
-<ul>
-<li>The binary dihedral group of <a class="existingWikiWord" href="/nlab/show/order+of+a+group">order</a> 8 is <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphic</a> to the <a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math>.</li>
-</ul>
+<h3 id="quaternion_group__and_triality">Quaternion group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> and triality</h3>
+<div style="float:right;margin:0 10px 10px 0;">
+<img src="https://upload.wikimedia.org/wikipedia/commons/5/59/Dynkin_diagram_D4.png" width="100" />
+</div>
+<p>The first binary dihedral group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><msub><mi>D</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">2 D_4</annotation></semantics></math> is <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphic</a> to the <a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a> of order 8:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mn>2</mn><msub><mi>D</mi> <mn>4</mn></msub><mo>≃</mo><msub><mi>Q</mi> <mn>8</mn></msub><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  2 D_4 \simeq Q_8
+  \,.
+
+</annotation></semantics></math></div>
+<p>In the <a class="existingWikiWord" href="/nlab/show/ADE-classification">ADE-classification</a> this is the entry <a class="existingWikiWord" href="/nlab/show/D4">D4</a>.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -564,14 +575,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 04:57:36.
+  Last revised on October  2, 2018 at 10:57:57.
   See the <a href="https://ncatlab.org/nlab/history/dihedral group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/dihedral+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dihedral+group/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/dihedral+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dihedral+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/dihedral+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dihedral+group/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/dihedral+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dihedral+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/dihedral group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
