--- a/pages/19741.html
+++ b/pages/19741.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      triality in nLab
+      D4 in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      triality
+      D4
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9091/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9090/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -311,38 +311,50 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
 <body>
+<blockquote>
+<p>This entry is about items in the <a class="existingWikiWord" href="/nlab/show/ADE-classification">ADE-classification</a> labeled by <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>D</mi><mn>4</mn></mrow><annotation encoding="application/x-tex">D4</annotation></semantics></math>. For the <a class="existingWikiWord" href="/nlab/show/D4-brane">D4-brane</a>, see there.</p>
+</blockquote>
+<hr />
 <h1 id="contents">Contents</h1>
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
-<li><a href='#references'>References</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
 </ul>
 </div>
 
 <h2 id="idea">Idea</h2>
-<div style="float:right;margin:0 10px 10px 0;">
-<img src="https://upload.wikimedia.org/wikipedia/commons/5/59/Dynkin_diagram_D4.png" width="100" />
-</div>
-<p>The <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a>/<a class="existingWikiWord" href="/nlab/show/Dynkin+quiver">Dynkin quiver</a> <a class="existingWikiWord" href="/nlab/show/D4">D4</a> has an <a class="existingWikiWord" href="/nlab/show/symmetric+group">S3</a>-<a class="existingWikiWord" href="/nlab/show/symmetry+group">symmetry group</a></p>
+
+<p>In the <a class="existingWikiWord" href="/nlab/show/ADE-classification">ADE-classification</a>, the items labeled <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>D</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">D_4</annotation></semantics></math> include the following:</p>
+
+<ol>
+<li>
+<p>as <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a>/<a class="existingWikiWord" href="/nlab/show/Dynkin+quiver">Dynkin quiver</a>:</p>
+
+<p><img src="https://upload.wikimedia.org/wikipedia/commons/5/59/Dynkin_diagram_D4.png" width="100" /></p>
 
 <p>(graphics grabbed from Wikipedia <a href="https://upload.wikimedia.org/wikipedia/commons/5/59/Dynkin_diagram_D4.png">here</a>)</p>
+</li>
 
-<p>This manifests itself in “triality” symmetries enjoyed by the objects that are labled by <a class="existingWikiWord" href="/nlab/show/D4">D4</a> in an <a class="existingWikiWord" href="/nlab/show/ADE-classification">ADE-classification</a>.</p>
+<li>
+<p>as <a class="existingWikiWord" href="/nlab/show/finite+subgroups+of+SU%282%29">finite subgroups of SU(2)</a>:</p>
 
-<p>Specifically for the <a class="existingWikiWord" href="/nlab/show/simple+Lie+group">simple Lie group</a> <a class="existingWikiWord" href="/nlab/show/SO%288%29">SO(8)</a> corresponding to <a class="existingWikiWord" href="/nlab/show/D4">D4</a>, triality is the statement that the two <a class="existingWikiWord" href="/nlab/show/spin+representations">spin representations</a> of the corresponding <a class="existingWikiWord" href="/nlab/show/spin+group">spin group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Spin</mi><mo stretchy="false">(</mo><mn>8</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Spin(8)</annotation></semantics></math> and the defining vector representations are all <a class="existingWikiWord" href="/nlab/show/isomorphism">isomorphic</a>, and in a nice way.</p>
+<p>the <a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a> of <a class="existingWikiWord" href="/nlab/show/order+of+a+group">order</a> 8 (the smallest <a class="existingWikiWord" href="/nlab/show/binary+dihedral+group">binary dihedral group</a>):</p>
 
-<h2 id="references">References</h2>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub><mo>≃</mo><mn>2</mn><msub><mi>D</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">Q_8 \simeq 2 D_4</annotation></semantics></math></p>
+</li>
 
-<p>See also</p>
+<li>
+<p>as <a class="existingWikiWord" href="/nlab/show/simple+Lie+groups">simple Lie groups</a>: the <a class="existingWikiWord" href="/nlab/show/special+orthogonal+group">special orthogonal group</a> in 8 dimensions</p>
+
+<p><a class="existingWikiWord" href="/nlab/show/SO%288%29">SO(8)</a></p>
+</li>
+</ol>
+
+<h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li>
-<p>Wikipedia, <em><a href="http://en.wikipedia.org/wiki/Triality">Triality</a></em></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/John+Baez">John Baez</a>, <em><a href="http://math.ucr.edu/home/baez/octonions/node7.html">Spinors and trialities</a></em></p>
-</li>
+<li><a class="existingWikiWord" href="/nlab/show/triality">triality</a></li>
 </ul>
 </body></html>
 
@@ -350,22 +362,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 10:55:38.
-  See the <a href="https://ncatlab.org/nlab/history/triality" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on October  2, 2018 at 10:45:58.
+  See the <a href="https://ncatlab.org/nlab/history/D4" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/triality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/triality/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/triality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/triality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/triality/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/D4" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/D4/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/triality" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/D4" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/triality" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/D4" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/triality" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/D4" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
