--- a/pages/16247.html
+++ b/pages/16247.html
@@ -485,6 +485,8 @@ margin-left: 0em;
 
 <p><img src="https://ncatlab.org/nlab/files/ADEDynkin.jpg" width="490" /></p>
 
+<p>Of particular interest is <a class="existingWikiWord" href="/nlab/show/D4">D4</a>, which enjoys <a class="existingWikiWord" href="/nlab/show/triality">triality</a>.</p>
+
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -508,14 +510,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 30, 2018 at 06:14:37.
+  Last revised on October  2, 2018 at 10:52:02.
   See the <a href="https://ncatlab.org/nlab/history/Dynkin diagram" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dynkin+diagram" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dynkin+diagram/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Dynkin+diagram" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dynkin+diagram" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Dynkin+diagram" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dynkin+diagram/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Dynkin+diagram" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dynkin+diagram" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Dynkin diagram/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
